--- a/destination details18.html
+++ b/destination details18.html
@@ -639,7 +639,7 @@
               </aside>
 
               <aside class="widget-banner mt-30">
-                <a href="#">
+                <a href="booknow.html">
                   <img
                     src="assets/images/banner/sidebar-banner.png"
                     alt
