--- a/destination details19.html
+++ b/destination details19.html
@@ -636,7 +636,7 @@
               </aside>
 
               <aside class="widget-banner mt-30">
-                <a href="#">
+                <a href="booknow.html">
                   <img
                     src="assets/images/banner/sidebar-banner.png"
                     alt
