--- a/inter3.html
+++ b/inter3.html
@@ -682,7 +682,7 @@
               </aside>
 
               <aside class="widget-banner mt-30">
-                <a href="#">
+                <a href="booknow.html">
                   <img
                     src="assets/images/banner/sidebar-banner.png"
                     alt
