--- a/inter4.html
+++ b/inter4.html
@@ -680,7 +680,7 @@
               </aside>
 
               <aside class="widget-banner mt-30">
-                <a href="#">
+                <a href="booknow.html">
                   <img
                     src="assets/images/banner/sidebar-banner.png"
                     alt
