--- a/inter5.html
+++ b/inter5.html
@@ -683,7 +683,7 @@
               </aside>
 
               <aside class="widget-banner mt-30">
-                <a href="#">
+                <a href="booknow.html">
                   <img
                     src="assets/images/banner/sidebar-banner.png"
                     alt
