--- a/package.html
+++ b/package.html
@@ -269,7 +269,7 @@
     <div class="category-sidebar-wrapper">
   <div class="category-sidebar">
     <div class="category-header d-flex justify-content-between align-items-center">
-      <h4>Category</h4>
+      <h4>Travel Desk</h4>
       <div class="category-toggle">
         <i class="bi bi-x-lg"></i>
       </div>
@@ -805,6 +805,104 @@ RajaRani Sightseeing Membership(RRSM)  </h3>
   </div>
 </div>
 <!-- raja rani Membership end -->
+
+
+    
+<!-- couple honeymoon   Membership start -->
+<div class="col-lg-4 col-md-6"> 
+  <div class="package-card-alpha h-100 p-3">
+
+        <!-- Membership Title with Logo -->
+<div class="d-flex align-items-center mb-3">
+  <!-- Logo on the left side -->
+  <img
+    src="assets/images/Photo_1726161078385.png" 
+    alt="SSM Logo"
+    class="img-fluid"
+    style="height: 70px; margin-right: 15px;" />
+  
+  <!-- Title shifted slightly to the left -->
+  <h3 class="p-card-title mb-0" style="text-align: left;">
+Couple Honeymoon Membership (CHM)</h3>
+</div>
+
+    <!-- Package Image -->
+    <div class="package-thumb mb-3">
+      <a href="https://api.whatsapp.com/send?phone=+919555695021&text=Hi!%20I%20would%20like%20to%20know%20more%20about%20Couple%20Honeymoon%20Membership%20(CHM)">
+        <img
+          src="assets/images/indian pic/pexels-photo-7846563.jpeg"
+          alt="Couple Honeymoon Membership"
+          class="img-fluid rounded"
+          style="height: 250px"
+        />
+      </a>
+    </div>
+
+    <!-- Membership Price and Booking Button -->
+    <div class="p-card-bottom d-flex justify-content-between align-items-center mb-3">
+      <div class="p-card-info text-start">
+        <span>From</span>
+        <h6 class="mb-0" style="font-size: 14px">
+            ₹55,500 /-<br /><small>Only for Couple</small>
+        </h6>
+      </div>
+      <div class="book-btn" style="text-align: right;">
+        <a href="booknow.html" 
+           class="btn btn-primary btn-sm" 
+           style="background-color: palevioletred; border-color: palevioletred;">
+          Book Now <i class="bx bxs-right-arrow-alt"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Membership Highlights -->
+    <div class="package-details">
+      <h4 class="mb-2">Membership Highlights</h4>
+      <ul class="list-unstyled mb-3">
+        <li><i class="bx bx-calendar" style="color: #f4b400;"></i> Validity: 2 years</li>
+        <li><i class="bx bx-location-plus" style="color: #f4b400;"></i> Sightseeing places: 03 destinations (India)</li>
+        <li><i class="bx bx-map-pin" style="color: #f4b400;"></i> Sightseeing at 500+ Domestic & International Destinations</li>
+        <li><i class="bx bx-camera" style="color: #f4b400;"></i> Diverse indoor and outdoor activities</li>
+        <li><i class="bx bx-wallet" style="color: #f4b400;"></i> ₹8,500 + AMC charge</li>
+      </ul>
+
+      <!-- AMC Details -->
+      <h4 class="mb-2">AMC Details</h4>
+      <p class="mb-3">
+        <strong>Annual Maintenance Cost (AMC): ₹8,500/-</strong>
+      </p>
+
+      <!-- Benefits and Rights Section (Read More) -->
+      <div id="more-info-chm" style="display: none;">
+        <h4 class="mb-2">Benefits and Rights</h4>
+        <ul class="list-unstyled mb-3">
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can Save for only 2 years</li>
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can Gift to only blood relatives</li>
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can be divided according to location</li>
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can be used 24x7 = 365 days (except festivals)</li>
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can go for sightseeing only three times in a year</li>
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can do sightseeing for three years in advance in a year</li>
+          <li><i class="bx bx-check" style="color: #f4b400;"></i> Can Transfer to other part (Anywhere, Anytime)</li>
+        </ul>
+
+        <!-- Special Offers -->
+        <h4 class="mb-2">Full Payment : Special Offers</h4>
+        <ul class="list-unstyled mb-3">
+          <li><i class="bx bx-film" style="color: #f4b400;"></i> 50-minute sightseeing film</li>
+          <li><i class="bx bx-camera" style="color: #f4b400;"></i> 100-photo sightseeing memories album</li>
+          <li><i class="bx bx-hotel" style="color: #f4b400;"></i> Accommodation in (Hotel or Resort)</li>
+        </ul>
+      </div>
+
+      <!-- Read More Button -->
+      <a href="javascript:void(0);" class="text-primary read-more-btn" style="color: #f4b400; text-decoration: none;" data-target="more-info-chm">
+        Read More
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- couple honeymoon   Membership end -->
           
         </div>
       </div>
@@ -1009,8 +1107,8 @@ RajaRani Sightseeing Membership(RRSM)  </h3>
                 <ul
                   class="policy-list justify-content-lg-end justify-content-center"
                 >
-                  <li><a href="#">Terms & Condition</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="terms&condition.html">Terms & Condition</a></li>
+                  <li><a href="terms&condition.html">Privacy Policy</a></li>
                 </ul>
               </div>
             </div>
