--- a/destination details17.html
+++ b/destination details17.html
@@ -275,7 +275,7 @@
     <div class="category-sidebar-wrapper">
   <div class="category-sidebar">
     <div class="category-header d-flex justify-content-between align-items-center">
-      <h4>Category</h4>
+      <h4>Travel Desk</h4>
       <div class="category-toggle">
         <i class="bi bi-x-lg"></i>
       </div>
@@ -850,8 +850,8 @@
                 <ul
                   class="policy-list justify-content-lg-end justify-content-center"
                 >
-                  <li><a href="#">Terms & Condition</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="terms&condition.html">Terms & Condition</a></li>
+                  <li><a href="terms&condition.html">Privacy Policy</a></li>
                 </ul>
               </div>
             </div>
