--- a/inter7.html
+++ b/inter7.html
@@ -279,7 +279,7 @@
         <div
           class="category-header d-flex justify-content-between align-items-center"
         >
-          <h4>Category</h4>
+          <h4>Travel Desk</h4>
           <div class="category-toggle">
             <i class="bi bi-x-lg"></i>
           </div>
@@ -895,8 +895,8 @@
                 <ul
                   class="policy-list justify-content-lg-end justify-content-center"
                 >
-                  <li><a href="#">Terms & Condition</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="terms&condition.html">Terms & Condition</a></li>
+                  <li><a href="terms&condition.html">Privacy Policy</a></li>
                 </ul>
               </div>
             </div>
